@@ -173,7 +173,7 @@ Unrecognized transfer encoding
 Invalid LDAP URL
 .IP "CURLE_FILESIZE_EXCEEDED (63)"
 Maximum file size exceeded
-.IP "CURLE_FTP_SSL_FAILED (64)"
+.IP "CURLE_USE_SSL_FAILED (64)"
 Requested FTP SSL level failed
 .IP "CURLE_SEND_FAIL_REWIND (65)"
 When doing a send operation curl had to rewind the data to retransmit, but the
