@@ -332,7 +332,7 @@
      d                 c                   62
      d  CURLE_FILESIZE_EXCEEDED...
      d                 c                   63
-     d  CURLE_FTP_SSL_FAILED...
+     d  CURLE_USE_SSL_FAILED...
      d                 c                   64
      d  CURLE_SEND_FAIL_REWIND...
      d                 c                   65
@@ -405,14 +405,14 @@
      d  CURLPROXY_SOCKS5...
      d                 c                   5
       *
-     d curl_ftpssl     s             10i 0 based(######ptr######)               Enum
-     d  CURLFTPSSL_NONE...
+     d curl_usessl     s             10i 0 based(######ptr######)               Enum
+     d  CURLUSESSL_NONE...
      d                 c                   0
-     d  CURLFTPSSL_TRY...
+     d  CURLUSESSL_TRY...
      d                 c                   1
-     d  CURLFTPSSL_CONTROL...
+     d  CURLUSESSL_CONTROL...
      d                 c                   2
-     d  CURLFTPSSL_ALL...
+     d  CURLUSESSL_ALL...
      d                 c                   3
       *
      d curl_ftpccc     s             10i 0 based(######ptr######)               Enum
